--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             <!-- Submitted homework will be displayed here -->
         </ul>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/9.16.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.16.0/firebase-firestore.js"></script>
 
     <script src="app.js"></script>
+    
 </body>
 </html>
