--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <ul id="homeworkList">
             <!-- Submitted homework will be displayed here -->
         </ul>
+        <div id="loadingMessage" style="display:none;">Loading homework...</div> <!-- Loading Message -->
+        <div id="errorMessage" style="color: red; display:none;"></div> <!-- Error Message -->
     </div>
 
     <!-- Firebase SDKs -->
