--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
                     <option value="">--Choose a Subject--</option>
                     <option value="Math">Math</option>
                     <option value="Science">Science</option>
-                    <option value="History">History</option>
+                    
                     <option value="English">English</option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="homeworkText">Homework Details:</label>
-                <textarea id="homeworkText" placeholder="Enter homework details" required></textarea>
+                <textarea id="homeworkText" placeholder="Enter homework details" ></textarea>
             </div>
 
             <div class="form-group">
                 <label for="homeworkFile">Upload Homework:</label>
-                <input type="file" id="homeworkFile" accept=".pdf,.doc,.docx,.txt,.jpg,.png" required />
+                <input type="file" id="homeworkFile" accept=".pdf,.doc,.docx,.txt,.jpg,.png, .jpeg" required />
             </div>
 
             <button type="submit">Submit Homework</button>
