--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <form id="homeworkForm">
             <div class="form-group">
                 <label for="subject">Select Subject:</label>
-                <select id="subject" required>
+                <select id="subject" >
                     <option value="">--Choose a Subject--</option>
                     <option value="Math">Math</option>
                     <option value="Science">Science</option>
